@@ -1,7 +1,8 @@
 componentdir = $(libdir)/flumotion/python/flumotion/admin/gtk
 component_PYTHON = \
 	__init__.py \
-	client.py
+	client.py \
+	dialogs.py
 
 clean-local:
 	rm -rf *.pyc *.pyo
